--- a/css/main.css
+++ b/css/main.css
@@ -1293,7 +1293,7 @@
   * ------------------------------------------------------------------- 
   */
  #intro {
-   background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+   background: #151515 url(../Images/intro-bg.jpg) no-repeat center bottom;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
