--- a/css/main.css
+++ b/css/main.css
@@ -2599,4 +2599,10 @@
  #about {
    background: url(https://i0.wp.com/wrbbradio.org/wp-content/uploads/2016/10/grey-background-for-site11.jpg?fit=1648%2C1165);
  }
+
+ .portfolio-header {
+
+  width: 100%;
+  text-align: center;
+ }
  /*# sourceMappingURL=main.css.map */
